Добавить 2 экран и 3 экран с цитатой

--- a/index.html
+++ b/index.html
@@ -34,6 +34,46 @@
             </div>
         </div>
     </div>
+    <div class="twoScreen">
+        <div class="content">
+            <div class = "twoScreenHeading">
+                Some random information
+            </div>
+            <div class="blockInformationeTwo">
+                <div class="twoScreenelements">
+                    <img class="twoScreenImage" src="/src/image/1.jpg" alt="">
+                    <div class="elementsText">this is some subtext ubder an ilustration or image</div>
+                </div>
+                <div class="twoScreenelements">
+                    <img class="twoScreenImage" src="./src/image/2.jpg" alt="">
+                    <div class="elementsText">this is some subtext ubder an ilustration or image</div>
+                </div>
+                <div class="twoScreenelements">
+                    <img class="twoScreenImage" src="./src/image/3.avif" alt="">
+                    <div class="elementsText">this is some subtext ubder an ilustration or image</div>
+                </div>
+                <div class="twoScreenelements">
+                    <img class="twoScreenImage" src="./src/image/4.jpg" alt="">
+                    <div class="elementsText">this is some subtext ubder an ilustration or image</div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div class="threeScreen">
+        <div class="content">
+            <div class="threeScreenCitata">
+                <div class="threeScreenCitataMain">
+                    For a long time it was a mystery to me how something very expensive and technologically advanced could be so useless.
+                     And I soon realized that a computer is a stupid machine with the ability to do incredibly smart things, whereas programmers are smart people who have the talent to do incredibly stupid things. 
+                     In short, they found each other.
+                </div>
+                <div class="threeScreenCitataAutor">
+                    -Jason Statham
+                </div>
+            </div>
+        </div>
+    </div>
+    
 
 </body>
 
