--- a/index.html
+++ b/index.html
@@ -10,8 +10,6 @@
 
 <body>
 
-
-
     <div class="oneScreen">
         <div class="content">
             <div class="headerMenu">
@@ -70,6 +68,18 @@
                 <div class="threeScreenCitataAutor">
                     -Jason Statham
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="fourScreen">
+        <div class="content">
+            <div class="fourScreenBlock">
+                <div class="fourScreenBlockText">
+                    <div class="fourScreenBlockTextTitle">Call to action! It's time!</div>
+                    <div class="fourScreenBlockTextMain">Sign up for our product by clicking that button right over there!</div>
+                </div>
+                <button class="fourScreenBlockTextButton">Sing up</button>
             </div>
         </div>
     </div>
