--- a/index.html
+++ b/index.html
@@ -83,7 +83,13 @@
             </div>
         </div>
     </div>
-    
+    <div class="fiveScreen">
+        <div class="content">
+            <div class="fiveScreenText">
+                Coperight ® The Odin Project 2021
+            </div>
+        </div>
+    </div>
 
 </body>
 
