Исправить бан во втором блоке не загружалась картинка

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             </div>
             <div class="blockInformationeTwo">
                 <div class="twoScreenelements">
-                    <img class="twoScreenImage" src="/src/image/1.jpg" alt="">
+                    <img class="twoScreenImage" src="./src/image/1.jpg" alt="">
                     <div class="elementsText">this is some subtext ubder an ilustration or image</div>
                 </div>
                 <div class="twoScreenelements">
